infrastructure/kubernetes/Mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: event-booking
spec:
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
    name: mongodb
  clusterIP: None
  selector:
    app: mongodb-sts
