infrastructure/kubernetes/User-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: event-booking
spec:
  selector:
    app: userservice
  ports:
    - name: http
      port: 3001
      targetPort: 3001
  type: ClusterIP
